fixes for for arxiv upload

--- a/SobolBayesCub-ver-e.tex
+++ b/SobolBayesCub-ver-e.tex
@@ -9,7 +9,7 @@
 %
 %
 \documentclass[graybox,footinfo]{svmult}
-
+\pdfoutput=1
 \smartqed
 \usepackage{helvet}         % selects Helvetica as sans-serif font
 \usepackage{courier}        % selects Courier as typewriter font
@@ -365,7 +365,7 @@ Figure~\ref{FJ:fig:walshkernel-dim1} shows $C_\bstheta (x,t)$ for order $r=1$ an
 
 \begin{figure}
 	\centering
-	\includegraphics[width=0.9\linewidth]{"figures/walsh_kernel dim_1"}
+	\includegraphics[width=0.9\linewidth]{"figures/walsh_kernel_dim_1"}
 	\caption[Walsh kernel]{Walsh kernel of order $r=1$ in dimension $d=1$. This figure can be reproduced using \texttt{plot\_walsh\_kernel.m}. 
 	}
 	\label{FJ:fig:walshkernel-dim1}
